# ThermalServer

./: .gitignore  README  README.md
config/: 12020038.xml  13070003.xml  88-optrisimager-usb.rules  Formats.def
include/: CallbackHandler.h  FramerateCounter.h  IRCalibrationManager.h  IRDeviceDS.h  IRDeviceParams.h  IRFileReader.h  IRFileWriter.h  IRImager.h  IRImagerClient.h  IRImagerSnapshot.h  IRLogger.h  ImageBuilder.h  PIImager.h  PIImagerSnapshot.h  SimpleXML.h  Timer.h  VideoCapture.h  unicode.h
recording/: Heizdaten.txt  thermalExport13-11-2017 02_46_52.csv  thermalExport13-11-2017 02_47_52.csv  thermalExport13-11-2017 02_48_52.csv  thermalExport13-11-2017 02_49_52.csv  thermalExport13-11-2017 02_50_52.csv  thermalExport13-11-2017 02_51_52.csv  thermalExport13-11-2017 02_52_52.csv  thermalExport13-11-2017 02_53_53.csv  thermalExport13-11-2017 02_54_53.csv  thermalExport13-11-2017 02_55_53.csv  thermalExport13-11-2017 02_56_53.csv  thermalExport13-11-2017 02_57_53.csv  thermalExport13-11-2017 02_58_53.csv  thermalExport13-11-2017 02_59_53.csv  thermalExport13-11-2017 03_00_53.csv  thermalExport13-11-2017 03_01_53.csv  thermalExport13-11-2017 03_02_53.csv  thermalExport13-11-2017 03_03_53.csv  thermalExport13-11-2017 03_04_53.csv  thermalExport13-11-2017 03_05_53.csv  thermalExport13-11-2017 03_06_53.csv  thermalExport13-11-2017 03_07_53.csv  thermalExport13-11-2017 03_08_53.csv  thermalExport13-11-2017 03_09_53.csv  thermalExport13-11-2017 03_10_53.csv  thermalExport13-11-2017 03_11_53.csv  thermalExport13-11-2017 03_12_53.csv  thermalExport13-11-2017 03_13_53.csv  thermalExport13-11-2017 03_14_53.csv  thermalExport13-11-2017 03_15_53.csv  thermalExport13-11-2017 03_16_54.csv  thermalExport13-11-2017 03_17_54.csv  thermalExport13-11-2017 03_18_54.csv  thermalExport13-11-2017 03_19_54.csv  thermalExport13-11-2017 03_20_54.csv  thermalExport13-11-2017 03_21_54.csv  thermalExport13-11-2017 03_22_54.csv  thermalExport13-11-2017 03_23_54.csv  thermalExport13-11-2017 03_24_54.csv  (+14 more)
src/: 15030146.xml  15030146_bak.xml  CMakeLists.txt  CVImageWidget.cpp  CVImageWidget.h  ConnectionHandler.cpp  ConnectionHandler.h  ControlCommand.cpp  ControlCommand.h  HandleThermalDataConnection.cpp  HandleThermalDataConnection.h  IRImagerGUI.cpp  IRImagerGUI.h  IRImagerHandler.cpp  IRImagerHandler.h  IWorker.h  ImageBuilder.h  Obvious2D.cpp  Obvious2D.h  Obvious2DClient.h  PIwideangle.xml  Server.cpp  Server.h  Settings.h  StreamWorker.cpp  StreamWorker.h  TabView.ui  ThermalDataServer.cpp  ThermalDataServer.h  ThermalVisualization.pro  ThermalWorker.cpp  ThermalWorker.h  main.cpp  main.qml  mainMinimalistic.cpp  mainwindow.cpp  mainwindow.h  myconf.xml  readSnapshot.cpp  smallCam.xml  (+3 more)
